syntax = "proto3";

package user_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/a1exCross/auth/pkg/user_v1;user_v1";

service UserV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Update(UpdateRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum UserRole {
    user = 0;
    admin = 1;
}

message UserPassword {
    string password = 1;
    string password_confirm = 2;
}

message UserInfo {
    string name = 1;
    string email = 2;
    UserRole role = 3;
}

message User {
    int64 id = 1;
    UserInfo info = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message CreateRequest {
    UserInfo info = 1;
    UserPassword pass = 2;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    User user = 1;
}

message UpdateRequest {
    int64 id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
    UserRole role = 4;
}
 
message DeleteRequest {
    int64 id = 1;
}